--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,13 @@ body{
    height: 100vh;
    display: flex;
    justify-content: center;
-   align-items: center
+   align-items: center;
+   overflow: hidden;
 }
 
 .app-container{
-   width: 80vw;
-   height: 90vh;
+   width: 90vw;
+   height: 95vh;
    display: flex;
 }
 
@@ -26,6 +27,7 @@ body{
 
 .utility-container{
    width: 35%;
+   min-width: 300px;
 }
 
 .utility-personal{
@@ -42,7 +44,7 @@ body{
 }
 
 .utility-contacts{
-   height: calc(100% - 80px - 50px - 100px); 
+   height: calc(100% - 80px - 50px - 100px);
    background-color: white;
 }
 
@@ -51,6 +53,8 @@ body{
 
 .chat-container{
    width: 65%;
+   min-width: 600px;
+   overflow:hidden;
 }
 
 .chat-info{
