--- a/css/style.css
+++ b/css/style.css
@@ -233,11 +233,33 @@ body{
 .chat-box{
    height: calc(100% - 160px);
    background-image: url('../img/mine.jpg');
+   padding: 50px 100px;
 }
 
-.user-chat{
-   float: right
+.contact-chat{
+   list-style: none;
 }
+
+.contact-chat li{
+   margin-top: 20px;
+   display: flex;
+
+}
+
+.contact-chat .message{
+   background-color: white;
+   padding: 15px;
+   border-radius: 10px;
+   width: 350px;
+}
+
+.contact-chat .message > div{
+   display: flex;
+   justify-content: flex-end;
+   font-size: 12px;
+   color: grey;
+}
+
 
 /* INPUT */
 
