--- a/css/style.css
+++ b/css/style.css
@@ -141,20 +141,29 @@ body{
    overflow-y: auto;
 }
 
-.my-contacts li{
+.my-contacts li a{
+   text-decoration: none;
+   color: black;
+}
+
+.my-contacts li a{
    display: flex;
    padding: 10px;
    border-bottom: 1px solid lightgrey;
 }
 
-.my-contacts li > img{
+.my-contacts li a > img{
    width: 70px;
    border-radius: 50%;
 }
 
-.my-contacts li > span{
+.my-contacts li a > span{
    margin-left: 20px;
    font-weight: bold;
+}
+
+.active{
+   background-color: #E9EBEB;
 }
 
 
