--- a/css/style.css
+++ b/css/style.css
@@ -252,11 +252,9 @@ body{
 .contact-chat li{
    margin-top: 20px;
    display: flex;
-
 }
 
 .contact-chat .message{
-   background-color: white;
    padding: 15px;
    border-radius: 10px;
    width: 350px;
@@ -267,6 +265,18 @@ body{
    justify-content: flex-end;
    font-size: 12px;
    color: grey;
+}
+
+.contact-chat .message.received {
+   background-color: white;
+}
+
+.contact-chat .message.sent {
+   background-color: #D5F9BA;
+}
+
+.contact-chat li.sent {
+   justify-content: flex-end;
 }
 
 
